# My-work

./: jh
Big_real integer/: Big.h  CMakeLists.txt  implementation.cpp  main.cpp
Commandline Interpreter/src/: AppendCommand.java  CatCommand.java  Cd.java  CdTest.java  CommandLineInterpreter.java  LsCommand.java  MkdirCommand.java  MkdirTest.java  MvCommand.java  PipelineCommand.java  PwdCommand.java  PwdCommandTest.java  (+6 more)
Cpu Task Schedulers/: FCAIScheduler.java  SJFScheduler.java  SRTFScheduler.java  inputHandler.java  metricsCalculator.java  priorityScheduler.java  schedulerSimulator.java
Gomoku Solver/: README.md  main.py
Invertedindexir/: README.md  index.txt
Library-Website/: README.md  bookstable.html  categories.html  index.html  script.js  signin.html  signup.html  styles.css  usertable.html
Python/: Encryption message.py  Factorial py.py  Problem8-solution.py.py  Quiz.py  Reverse.py  SO2AL 11.py  SO2AL 13.py  SO2AL 29.py  So2al 27.py  Time diff.py  decimal to binary.py  error file.py  question.py  so2al 28.py  so2al 30.py  so2al 31.py  so2al 32.py  so2al 35.py  so2al 36.py  so2al 37.py  so2al 38.py  so2al 39.py  so2al 40.py  swap items in list.py
Registration Webpage (laravel)/: TeamMembers.txt
Webcrawlerir/: pom.xml
image filters/: CMakeLists.txt  CS213-2023-S20-20220290-20220210-A1-FULL.cpp  CS213-2023-S20-20220290-20220210-A1Bonus.cpp
tic tac toe game/: BoardGame_Classes.hpp  CMakeLists.txt  GameManager.cpp  Player.cpp  RandomPlayer.cpp  five_tic_tac_toe_Board.cpp  four_in_a_row_App.cpp  four_in_a_row_Board.cpp  main.cpp  pyramid_XO.cpp
(+85 files in other folders)
